[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/PickableList.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/HideButton.gd" type="Script" id=2]
[ext_resource path="res://Editors/DialogEditor.gd" type="Script" id=3]
[ext_resource path="res://UI/ScrollablePopupMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://EditorsElements/DialogEditor/DialogNodeSettingsHandler.gd" type="Script" id=5]
[ext_resource path="res://UI/Fonts/BigMainEditorFont.tres" type="DynamicFont" id=6]

[node name="DialogEditor" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="DialogList" parent="." instance=ExtResource( 1 )]
margin_right = 150.0
margin_bottom = 600.0
button_suffix = "dialog"

[node name="HideButton" type="Button" parent="."]
margin_left = 154.0
margin_right = 172.0
margin_bottom = 600.0
text = ">"
script = ExtResource( 2 )
hide_node = NodePath("../DialogList")
on_hide_text = ">"
on_show_text = "<"

[node name="Split" type="HSplitContainer" parent="."]
margin_left = 176.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="MapUi" type="MarginContainer" parent="Split"]
margin_right = 598.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Map" type="GraphEdit" parent="Split/MapUi"]
margin_right = 598.0
margin_bottom = 600.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2( -300, -204 )

[node name="AddMenu" type="PopupMenu" parent="Split/MapUi/Map"]
margin_left = 848.0
margin_right = 868.0
margin_bottom = 20.0

[node name="TemplatesMenu" type="PopupMenu" parent="Split/MapUi/Map/AddMenu"]
margin_right = 20.0
margin_bottom = 20.0

[node name="Blocker" type="ColorRect" parent="Split/MapUi"]
margin_right = 598.0
margin_bottom = 600.0
mouse_default_cursor_shape = 8
color = Color( 1, 1, 1, 0.164706 )

[node name="Label" type="Label" parent="Split/MapUi/Blocker"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Add new dialog to start editiong!"
align = 1
valign = 1

[node name="NodeEdit" type="HBoxContainer" parent="Split"]
margin_left = 610.0
margin_right = 848.0
margin_bottom = 600.0

[node name="HideButton" type="Button" parent="Split/NodeEdit"]
margin_right = 20.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 0
script = ExtResource( 2 )
hide_node = NodePath("../NodeInfoShower")
on_hide_text = "Show node settings"
on_show_text = "Hide node settings"
enable_side_label = true

[node name="NodeInfoShower" type="PanelContainer" parent="Split/NodeEdit"]
margin_left = 24.0
margin_right = 238.0
margin_bottom = 600.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="Settings" type="VBoxContainer" parent="Split/NodeEdit/NodeInfoShower"]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="HBoxContainer" parent="Split/NodeEdit/NodeInfoShower/Settings"]
margin_right = 200.0
margin_bottom = 24.0

[node name="IsStart" type="CheckBox" parent="Split/NodeEdit/NodeInfoShower/Settings/Start"]
margin_right = 52.0
margin_bottom = 24.0
text = "Start"

[node name="PointName" type="Button" parent="Split/NodeEdit/NodeInfoShower/Settings/Start"]
margin_left = 56.0
margin_right = 200.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "PointName:"

[node name="HSeparator2" type="HSeparator" parent="Split/NodeEdit/NodeInfoShower/Settings"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 32.0

[node name="AddBlockBt" parent="Split/NodeEdit/NodeInfoShower/Settings" instance=ExtResource( 4 )]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 57.0
text = "Add Block..."
rename_button_on_select = false

[node name="HSeparator3" type="HSeparator" parent="Split/NodeEdit/NodeInfoShower/Settings"]
margin_top = 61.0
margin_right = 200.0
margin_bottom = 65.0

[node name="Scroll" type="ScrollContainer" parent="Split/NodeEdit/NodeInfoShower/Settings"]
margin_top = 69.0
margin_right = 200.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="DialogNodeSettingsHandler" type="VBoxContainer" parent="Split/NodeEdit/NodeInfoShower/Settings/Scroll"]
margin_right = 200.0
margin_bottom = 517.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[connection signal="add_item_request" from="DialogList" to="." method="_on_DialogList_add_item_request"]
[connection signal="delete_item_request" from="DialogList" to="." method="_on_DialogList_delete_item_request"]
[connection signal="item_selected" from="DialogList" to="." method="_on_DialogList_item_selected"]
[connection signal="rename_item_request" from="DialogList" to="." method="_on_DialogList_rename_item_request"]
[connection signal="child_exiting_tree" from="Split/MapUi/Map" to="." method="_on_Map_child_exiting_tree"]
[connection signal="connection_from_empty" from="Split/MapUi/Map" to="." method="_on_Map_connection_from_empty"]
[connection signal="connection_request" from="Split/MapUi/Map" to="." method="_on_Map_connection_request"]
[connection signal="connection_to_empty" from="Split/MapUi/Map" to="." method="_on_Map_connection_to_empty"]
[connection signal="delete_nodes_request" from="Split/MapUi/Map" to="." method="_on_Map_delete_nodes_request"]
[connection signal="disconnection_request" from="Split/MapUi/Map" to="." method="_on_Map_disconnection_request"]
[connection signal="node_selected" from="Split/MapUi/Map" to="." method="_on_Map_node_selected"]
[connection signal="node_unselected" from="Split/MapUi/Map" to="." method="_on_Map_node_unselected"]
[connection signal="popup_request" from="Split/MapUi/Map" to="." method="_on_Map_popup_request"]
[connection signal="index_pressed" from="Split/MapUi/Map/AddMenu" to="." method="_on_AddMenu_index_pressed"]
[connection signal="index_pressed" from="Split/MapUi/Map/AddMenu/TemplatesMenu" to="." method="_on_TemplatesMenu_index_pressed"]
[connection signal="hide_hidable_node" from="Split/NodeEdit/HideButton" to="." method="_on_HideButton_hide_hidable_node"]
[connection signal="toggled" from="Split/NodeEdit/NodeInfoShower/Settings/Start/IsStart" to="." method="_on_IsStart_toggled"]
[connection signal="pressed" from="Split/NodeEdit/NodeInfoShower/Settings/Start/PointName" to="." method="_on_PointName_pressed"]
[connection signal="item_selected" from="Split/NodeEdit/NodeInfoShower/Settings/AddBlockBt" to="." method="_on_AddSettingBt_item_selected"]
[connection signal="child_exiting_tree" from="Split/NodeEdit/NodeInfoShower/Settings/Scroll/DialogNodeSettingsHandler" to="." method="_on_DialogNodeSettingsHandler_child_exiting_tree"]
